# llmbouncer

./: .gitignore  README.md  pyproject.toml
docs/decisions/: ADR-001-api-shape.md  ADR-002-verdict-type.md  ADR-003-rate-limit-scope.md
docs/superpowers/plans/: 2026-07-20-llm-bouncer-week1.md
docs/superpowers/specs/: 2026-07-20-llm-bouncer-week1-design.md
examples/: quickstart.py
src/llm_bouncer/: __init__.py  audit.py  pipeline.py  result.py
src/llm_bouncer/data/: injection_patterns.yaml
src/llm_bouncer/rails/: __init__.py  base.py  injection.py  length.py  rate.py  secrets.py
tests/: test_audit.py  test_injection.py  test_pipeline.py  test_rate.py  test_secrets.py
