[project]
name = "llm-bouncer"
version = "0.0.1"
description = "Drop-in guardrails for LLM and MCP apps"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_bouncer"]